# BSUIR

./: README.md
1sem/: laba 3.cpp  laba4.cpp  labba5.c  лаба 1.cpp  лаба 2.cpp
1sem/blocks/: ,kjrb.vsdx  laba 3.vsdx  блоки1.vsdx  лаба 2.vsdx
1sem/for exam/: tasks.c  taskss.c  какая-то дичь.docx  шпоры.docx
1sem/laba6/: 6laba.c  functionss.h
1sem/laba7/: 7laba.c  library.h  tempCodeRunnerFile.c
1sem/others/: lona.cpp  taska.c  taskaa.c  быстрая сортировка.txt  вставка 0 после каждого четного.txt  вывод мас.txt  (+16 more)
2sem/: laba1.c  laba2.c
4sem/: МатСтат.docx  матстат.xlsx
7sem/CUDA/lab5/: CMakeLists.txt  emboss.cu  emboss.h  main.cpp
7sem/CUDA/lab_4/: CMakeLists.txt  lab_3.vcxproj  main.cu  main_cuda.cu  prefix.cu  prefix.h  triple.cu  triple.h  utils.cu  utils.h
7sem/CUDA/lab_4/lab_4/x64/Release/: lab_4.exe.recipe  main.cu-1169068519.deps  main.cu.cache  prefix.cu.cache  prefix.cu628594818.deps  triple.cu.cache  triple.cu23093194.deps  utils.cu.cache  utils.cu355846725.deps
7sem/CUDA/lab_4/lab_4/x64/Release/lab_4.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  lab_4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
7sem/CUDA/lab_4/x64/Debug/: lab_3.exp
7sem/CUDA/lab_4/x64/Release/: lab_4.exp  lab_4.lib
diploma/: Заявление_на_утверждение_темы_дипломного_проекта.docx
шаблоны и госты/: 01.ТЛ по ПДП_2024.docx  А2 со слоями ЭВМ.dwg  А3 со слоями ЭВМ.dwg  А4 книжная со слоями ЭВМ.dwg  Ведомость документов.vsdx  Диаграмма классов А3.vsdx  Документация.dwg  Пояснительная записка ДП (для программного шаблон)_2024.docx  Рамка А3 - схт.vsdx
(+1831 files in other folders)
